@@ -4,8 +4,8 @@ bad_md5 = [
 ]
 
 good_md5 = [
-        'b525aa7092ebc139a2aee3762002ef05',
         '5879a651eabb6c6bdbb3a314649d9c6c',
+        'b525aa7092ebc139a2aee3762002ef05',
         'sentinel'
 ]
 
